codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_manual_compact_without_prev_user_shapes.snap
---
source: core/tests/suite/compact_remote.rs
expression: "format!(\"## Remote Compaction Request\\n<SKIPPED_EMPTY_INPUT>\\n\\n## Remote Post-Compaction History Request\\n{}\",\nrequest_input_shape(&follow_up_request))"
---
## Remote Compaction Request
<SKIPPED_EMPTY_INPUT>

## Remote Post-Compaction History Request
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user:<AGENTS_MD>
02:message/user:<ENVIRONMENT_CONTEXT>
03:message/user:USER_ONE
