codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_pre_turn_compaction_fallback_shapes.snap
---
source: core/tests/suite/compact_remote.rs
expression: "sectioned_request_shapes(&[(\"Remote Compaction Request (Including Incoming Attempt)\",\n&include_attempt_request),\n(\"Remote Compaction Request (Fallback Excluding Incoming)\",\n&fallback_attempt_request),\n(\"Remote Post-Compaction History Request\", &requests[1]),])"
---
## Remote Compaction Request (Including Incoming Attempt)
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user:<AGENTS_MD>
02:message/user:<ENVIRONMENT_CONTEXT>
03:message/user:USER_ONE
04:message/assistant:REMOTE_FIRST_REPLY
05:message/user:USER_TWO

## Remote Compaction Request (Fallback Excluding Incoming)
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user:<AGENTS_MD>
02:message/user:<ENVIRONMENT_CONTEXT>
03:message/user:USER_ONE
04:message/assistant:REMOTE_FIRST_REPLY

## Remote Post-Compaction History Request
00:message/user:USER_ONE
01:message/user:<SUMMARY:REMOTE_FALLBACK_SUMMARY>
02:message/developer:<PERMISSIONS_INSTRUCTIONS>
03:message/user:<AGENTS_MD>
04:message/user:<ENVIRONMENT_CONTEXT>
05:message/user:USER_TWO
